Project tile grid now shows three projects per row even on larger screens. Fixed bug where loading animation would overlap header

--- a/src/App.css
+++ b/src/App.css
@@ -46,6 +46,7 @@ body {
   #project-tiles {
     min-height:  var(--mobile-screen-height) !important;
     scroll-margin-top: 3rem !important;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)) !important;
   }
 
   #contact {
@@ -69,6 +70,10 @@ html, body {
   margin: 0;
   padding: 0;
   font-weight: 600;
+}
+
+main {
+  z-index: 0;
 }
 
 a {
@@ -120,6 +125,7 @@ button:active {
   width: 100%;
   background-color: #333333;
   border-bottom: black solid 5px;
+  z-index: 1;
 }
 
 #linkedin-link {
@@ -191,7 +197,7 @@ h2 {
 #project-tiles {
   display: grid;
   gap: 32px;
-  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  grid-template-columns: repeat(3, 1fr);
   background-color: #A0EEC0;
   background-image: linear-gradient(45deg, #e6add8 0%, #ADD8E6 50%, #A0EEC0 100%);
   min-height: var(--screen-height);
@@ -204,7 +210,7 @@ h2 {
   background-color: #444;
   border: solid black 4px;
   text-align: center;
-  height: 300px;
+  min-height: 300px;
 }
 
 .tile-header {
